--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,11 +2,11 @@ html {
     text-align: center;
     align-items: center;
     background-color: black;
+    font-family: Verdana
 }
 
 h1, h3, p {
     color: white;
-    font-family: Verdana;
 }
 
 video {
@@ -32,4 +32,10 @@ h3{
 a{
     font-size: 16px;
     color: aquamarine;
+}
+
+footer{
+    color: gray;
+    text-align: right;
+    align-items: right;
 }
